// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transition > Events > should fire events for all the stages 1`] = `
"Render 1:
    +  <div
    +    class="duration-75 enter-active opacity-0 enter"
    +  >
    +    <span>
    +      Hello!
    +    </span>
    +  </div>

Render 2:
    -  class="duration-75 enter-active opacity-0 enter"
    +  class="duration-75 enter-active opacity-100 enter-to"

Render 3: Transition took at least 75ms
    -  class="duration-75 enter-active opacity-100 enter-to"
    +  class

Render 4:
    -  class
    +  class="duration-100 exit-active opacity-100 exit"

Render 5:
    -  class="duration-100 exit-active opacity-100 exit"
    +  class="duration-100 exit-active opacity-0 exit-to"

Render 6: Transition took at least 100ms
    -  <div
    -    class="duration-100 exit-active opacity-0 exit-to"
    -  >
    -    <span>
    -      Hello!
    -    </span>
    -  </div>"
`;

exports[`Transition > Setup > 'base' and 'from' classes applied immediately to transition element when show=true and appear=true 1`] = `
"<div
  class="duration-75 enter-active opacity-0 enter"
>
  <span>
    Hello!
  </span>
</div>"
`;

exports[`Transition > Setup > transition element immediately hidden when show=false 1`] = `""`;

exports[`Transition > Setup > transition element immediately shown when show=true 1`] = `
"<div>
  <span>
    Hello!
  </span>
</div>"
`;

exports[`Transition > Shallow Transitions > Switch > should transition in new element and transition out old element at the same time (parallel) > case 1: durations are the same 1`] = `
"Render 1:
    -  <div>
    +  <div
    +    class="duration-75 enter-active opacity-0 enter"
    +  >
    +    2
    +  </div>
    +  <div
    +    class="duration-75 exit-active opacity-100 exit"
    +  >

Render 2:
    -  class="duration-75 enter-active opacity-0 enter"
    +  class="duration-75 enter-active opacity-100 enter-to"
    ---
    -  class="duration-75 exit-active opacity-100 exit"
    +  class="duration-75 exit-active opacity-0 exit-to"

Render 3: Transition took at least 75ms
    -    class="duration-75 enter-active opacity-100 enter-to"
    +    class
    ---
    -  </div>
    -  <div
    -    class="duration-75 exit-active opacity-0 exit-to"
    -  >
    -    1"
`;

exports[`Transition > Shallow Transitions > Switch > should transition in new element and transition out old element at the same time (parallel) > case 2: durations are different 1`] = `
"Render 1:
    -  <div>
    +  <div
    +    class="duration-75 enter-active opacity-0 enter"
    +  >
    +    2
    +  </div>
    +  <div
    +    class="duration-100 exit-active opacity-100 exit"
    +  >

Render 2:
    -  class="duration-75 enter-active opacity-0 enter"
    +  class="duration-75 enter-active opacity-100 enter-to"
    ---
    -  class="duration-100 exit-active opacity-100 exit"
    +  class="duration-100 exit-active opacity-0 exit-to"

Render 3: Transition took at least 100ms
    -    class="duration-75 enter-active opacity-100 enter-to"
    +    class
    ---
    -  </div>
    -  <div
    -    class="duration-100 exit-active opacity-0 exit-to"
    -  >
    -    1"
`;

exports[`Transition > Shallow Transitions > Switch > should transition in new element followed by transitioning old element out (in-out) 1`] = `
"Render 1:
    +  <div
    +    class="duration-75 enter-active opacity-0 enter"
    +  >
    +    2
    +  </div>

Render 2:
    -  class="duration-75 enter-active opacity-0 enter"
    +  class="duration-75 enter-active opacity-100 enter-to"

Render 3: Transition took at least 75ms
    -    class="duration-75 enter-active opacity-100 enter-to"
    +    class
    ---
    -  <div>
    +  <div
    +    class="duration-100 exit-active opacity-100 exit"
    +  >

Render 4:
    -  class="duration-100 exit-active opacity-100 exit"
    +  class="duration-100 exit-active opacity-0 exit-to"

Render 5:
    -  <div
    -    class="duration-100 exit-active opacity-0 exit-to"
    -  >
    -    1
    -  </div>"
`;

exports[`Transition > Shallow Transitions > Switch > should transition out old element followed by transitioning new element in (out-in) 1`] = `
"Render 1:
    -  <div>
    +  <div
    +    class="duration-100 exit-active opacity-100 exit"
    +  >

Render 2:
    -  class="duration-100 exit-active opacity-100 exit"
    +  class="duration-100 exit-active opacity-0 exit-to"

Render 3: Transition took at least 100ms
    -  class="duration-100 exit-active opacity-0 exit-to"
    +  class="duration-75 enter-active opacity-0 enter"
    ---
    -  1
    +  2

Render 4:
    -  class="duration-75 enter-active opacity-0 enter"
    +  class="duration-75 enter-active opacity-100 enter-to"

Render 5: Transition took at least 75ms
    -  class="duration-75 enter-active opacity-100 enter-to"
    +  class"
`;

exports[`Transition > Shallow Transitions > Toggle > should transition in and out completely (generated classes) 1`] = `
"Render 1:
    +  <div
    +    class="transitionElement-enter-active transitionElement-enter"
    +  >
    +    <span>
    +      Hello!
    +    </span>
    +  </div>

Render 2:
    -  class="transitionElement-enter-active transitionElement-enter"
    +  class="transitionElement-enter-active transitionElement-enter-to"

Render 3: Transition took at least 75ms
    -  class="transitionElement-enter-active transitionElement-enter-to"
    +  class

Render 4:
    -  class
    +  class="transitionElement-exit-active transitionElement-exit"

Render 5:
    -  class="transitionElement-exit-active transitionElement-exit"
    +  class="transitionElement-exit-active transitionElement-exit-to"

Render 6: Transition took at least 100ms
    -  <div
    -    class="transitionElement-exit-active transitionElement-exit-to"
    -  >
    -    <span>
    -      Hello!
    -    </span>
    -  </div>"
`;

exports[`Transition > Shallow Transitions > Toggle > should transition in and out completely 1`] = `
"Render 1:
    +  <div
    +    class="duration-75 enter-active opacity-0 enter"
    +  >
    +    <span>
    +      Hello!
    +    </span>
    +  </div>

Render 2:
    -  class="duration-75 enter-active opacity-0 enter"
    +  class="duration-75 enter-active opacity-100 enter-to"

Render 3: Transition took at least 75ms
    -  class="duration-75 enter-active opacity-100 enter-to"
    +  class

Render 4:
    -  class
    +  class="duration-100 exit-active opacity-100 exit"

Render 5:
    -  class="duration-100 exit-active opacity-100 exit"
    +  class="duration-100 exit-active opacity-0 exit-to"

Render 6: Transition took at least 100ms
    -  <div
    -    class="duration-100 exit-active opacity-0 exit-to"
    -  >
    -    <span>
    -      Hello!
    -    </span>
    -  </div>"
`;

exports[`Transition > Shallow Transitions > Toggle > should transition in completely (generated classes) 1`] = `
"Render 1:
    +  <div
    +    class="transitionElement-enter-active transitionElement-enter"
    +  >
    +    <span>
    +      Hello!
    +    </span>
    +  </div>

Render 2:
    -  class="transitionElement-enter-active transitionElement-enter"
    +  class="transitionElement-enter-active transitionElement-enter-to"

Render 3: Transition took at least 75ms
    -  class="transitionElement-enter-active transitionElement-enter-to"
    +  class"
`;

exports[`Transition > Shallow Transitions > Toggle > should transition in completely 1`] = `
"Render 1:
    +  <div
    +    class="duration-75 enter-active opacity-0 enter"
    +  >
    +    <span>
    +      Hello!
    +    </span>
    +  </div>

Render 2:
    -  class="duration-75 enter-active opacity-0 enter"
    +  class="duration-75 enter-active opacity-100 enter-to"

Render 3: Transition took at least 75ms
    -  class="duration-75 enter-active opacity-100 enter-to"
    +  class"
`;

exports[`Transition > Shallow Transitions > Toggle > should transition out completely (generated classes) 1`] = `
"Render 1:
    -  <div>
    +  <div
    +    class="transitionElement-exit-active transitionElement-exit"
    +  >

Render 2:
    -  class="transitionElement-exit-active transitionElement-exit"
    +  class="transitionElement-exit-active transitionElement-exit-to"

Render 3: Transition took at least 75ms
    -  <div
    -    class="transitionElement-exit-active transitionElement-exit-to"
    -  >
    -    <span>
    -      Hello!
    -    </span>
    -  </div>"
`;

exports[`Transition > Shallow Transitions > Toggle > should transition out completely 1`] = `
"Render 1:
    -  <div>
    +  <div
    +    class="duration-75 exit-active opacity-100 exit"
    +  >

Render 2:
    -  class="duration-75 exit-active opacity-100 exit"
    +  class="duration-75 exit-active opacity-0 exit-to"

Render 3: Transition took at least 75ms
    -  <div
    -    class="duration-75 exit-active opacity-0 exit-to"
    -  >
    -    <span>
    -      Hello!
    -    </span>
    -  </div>"
`;
